  selected when the action is "purge".
* (bug 14267) Support a MediaWiki:Mainpage-nstab override for the subject namespace
  tab on the mainpage of a wiki.
* (bug 10158) Do not mention allowing others to contact you when the feature
  is disabled ($wgEnableUserEmail=false)
* (bug 26733) Wrap initial table creation in transaction

=== API changes in 1.18 ===
* (bug 26339) Throw warning when truncating an overlarge API result
* (bug 14869) Add API module for accessing QueryPage-based special pages
* (bug 14020) API for Special:Unwatchedpages
* (bug 24287) Wrap API Help output at 100 characters
* Add a realname uiprop option to query=userinfo so a user's realname can be extracted
* Add a &watchuser option to ApiBlock
* (bug 26541) Generator-ise ApiQueryRecentChanges
* action=parse now correctly returns an error for nonexistent pages
* (bug 25767) Add userrights properties to allusers and users query lists
* (bug 26558) list=allusers auprop=groups does not list groups a user is automatically a member of
* (bug 26559) list=allusers auprop=rights does not match list=users usprop=rights
* (bug 26560) On allusers if limit < total number of users, last user gets duplicate
* (bug 25135) add "normalized" to action=parse
* (bug 26460) Add support for listing category members by category pageid
* (bug 26482) add a imimages param to prop=images
* (bug 26498) allow LinksUpdate with API
* (bug 26485) add a elextlinks param to prop=extlinks
* (bug 26483) add a iwtitles param to prop=iwlinks
* (bug 26484) add a lltitles param to prop=langlinks
* (bug 26480) add a pppageprops param to prop=pageprops
* (bug 26650) Remove $wgAPICacheHelp in favour of $wgAPICacheHelpTimeout
* (bug 24650) Fix API to work with categorylinks changes

=== Languages updated in 1.18 ===

MediaWiki supports over 330 languages. Many localisations are updated
regularly. Below only new and removed languages are listed, as well as
changes to languages because of Bugzilla reports.

== Compatibility ==
